<resources>
    <string name="app_name">Easy Task</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_task_title">Please fill all task details right now you nice guy :)</string>
    <string name="task_name">Task...</string>
    <string name="task_description">Description...</string>
    <string name="completed_check_box">completed</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="set_location">Set location</string>
</resources>
