<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_task_title"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextDescription"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>
        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_height="wrap_content"
            android:text="@string/some_check_box"
            android:layout_width="fill_parent">
        </CheckBox>
        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="wrap_content"
            android:text="someText"
            android:onClick="sendFeedback"
            android:layout_width="wrap_content">
        </Button>

    </LinearLayout>

</ScrollView>