<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    tools:context=".EditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical">


        <EditText
            android:id="@+id/EditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:maxLines="1"
            android:inputType="text"></EditText>

        <CheckBox
            android:id="@+id/CheckBoxCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed_check_box"></CheckBox>

        <EditText
            android:id="@+id/EditTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideOverlay"
            android:fadeScrollbars="true"
            android:fadingEdge="vertical"
            android:lines="5"></EditText>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:id="@+id/EditTextChooseDate"
                android:layout_width="@dimen/chosenDateTextWidth"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/set_date"
                android:inputType="date"
                android:textDirection="ltr"></EditText>

            <ImageButton
                android:id="@+id/btnDeleteDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/EditTextChooseDate"
                android:src="@drawable/baseline_cancel_presentation_black_18" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:id="@+id/EditTextChooseTime"
                android:layout_width="@dimen/chosenTimeTextWidth"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/set_time"
                android:inputType="text"></EditText>

            <ImageButton
                android:id="@+id/btnDeleteTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/EditTextChooseTime"
                android:src="@drawable/baseline_cancel_presentation_black_18" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:id="@+id/EditTextChooseLocation"
                android:layout_width="@dimen/chosenLocationTextWidth"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="left"
                android:hint="@string/set_location"
                android:inputType="textMultiLine"
                android:lines="3"></EditText>

            <ImageButton
                android:id="@+id/btnDeleteLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/EditTextChooseLocation"
                android:src="@drawable/baseline_cancel_presentation_black_18" />
            <ProgressBar
                android:id="@+id/progressBarLocation"
                android:layout_alignRight="@id/btnDeleteLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>




    </LinearLayout>

</ScrollView>